fixed mobile navbar; hero sections in home and about - spacing; getintouch font size mobile

--- a/app/components/AboutHero/aboutHero.module.scss
+++ b/app/components/AboutHero/aboutHero.module.scss
@@ -1,7 +1,7 @@
 @use "../../styles/breakpoints.scss" as *;
 
 .aboutHero {
-  margin: 15rem auto 10rem;
+  margin: 8rem auto;
   display: flex;
   flex-direction: column-reverse;
   padding-left: 2.4rem;
@@ -12,6 +12,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
+    margin-top: 15rem;
   }
 
   &__imageContainer {
@@ -50,5 +51,11 @@
         font-size: 2.4rem;
       }
     }
+  }
+
+  &__text {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
   }
 }
