--- a/app/components/Navbar/navbar.module.scss
+++ b/app/components/Navbar/navbar.module.scss
@@ -15,7 +15,11 @@
     align-items: center;
     max-width: 128rem;
     margin: auto;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
+
+    @include media-query($from: tablet) {
+      font-size: 1.8rem;
+    }
   }
 
   &__logoLink {
@@ -42,7 +46,10 @@
   &__linksWrapper {
     list-style: none;
     display: flex;
-    gap: 2rem;
+
+    @include media-query($from: tablet) {
+      gap: 2rem;
+    }
 
     a {
       padding: 1rem 1.8rem;
@@ -82,14 +89,6 @@
       height: 3px;
       background-color: #fff;
       transition: 300ms;
-    }
-  }
-
-  &__desktopMenu {
-    display: none;
-
-    @include media-query($from: tablet) {
-      display: flex;
     }
   }
 }
